Updated Title to Playground.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Sidebar from '@/components/ui/Sidebar'
 import BuildStores from '@/components/client-only/BuildStores'
 ---
 
-<Layout title="Anse">
+<Layout title="Playground">
     <div class="h-100vh w-screen flex">
       <Sidebar direction="left" class="hidden md:block">
         <ConversationSidebar client:only />
